fix(navbar): set align-items to center for mobile devices
this makes the image and text on the same line

--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,12 @@ body {
     background-color: var(--background-accent-color);
 }
 
+@media screen and (max-width: 1080px) {
+    .navbar {
+        align-items: center;
+    }
+}
+
 .logo {
     width: 40px;
     height: auto;
